# visura-api

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  auth.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  utils.py
auth/: __init__.py  base.py  cie.py  factory.py  sielte.py
auth/tests/: test_browser_manager.py  test_cie.py  test_pagelogger.py  test_sielte.py
tests/: test_main.py  test_utils.py
